# bottlecap-sorter

./: Dockerfile  README.md  pyproject.toml  verify_core.py  verify_wandb.py
.github/workflows/: ci.yaml
configs/: config.yaml  settings.yaml
dataset/processed/: raw-250110_dc_s001_b4_1.txt  raw-250110_dc_s001_b4_2.txt
notebooks/: model_dev_and_exp.ipynb
scripts/: visualize_processed.py
src/bsort/: benchmark.py  cli.py  data.py  inference.py  model.py  train.py
src/bsort.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/bsort/utils/: config.py  logging.py  metrics.py  visualization.py
tests/: test_data.py  test_model.py
wandb/: latest-run
wandb/run-20251125_214206-4t3g2wlo/: run-4t3g2wlo.wandb
wandb/run-20251125_214938-nm4dk7sp/: run-nm4dk7sp.wandb
wandb/run-20251125_215151-jikkchaj/: run-jikkchaj.wandb
wandb/run-20251125_215151-jikkchaj/files/: config.yaml  requirements.txt  wandb-metadata.json
wandb/run-20251125_223438-9vp9lv38/: run-9vp9lv38.wandb
wandb/run-20251125_223438-9vp9lv38/files/: config.yaml  requirements.txt  wandb-metadata.json  wandb-summary.json
wandb/run-20251125_230225-6s7slffd/: run-6s7slffd.wandb
wandb/run-20251125_230225-6s7slffd/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20251125_232649-b7l36o14/: run-b7l36o14.wandb
wandb/run-20251125_232649-b7l36o14/files/: config.yaml  wandb-metadata.json
wandb/run-20251125_232816-gcd2r1pf/: run-gcd2r1pf.wandb
wandb/run-20251125_232816-gcd2r1pf/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20251125_233128-mlu7b9j5/: run-mlu7b9j5.wandb
wandb/run-20251125_233128-mlu7b9j5/files/: config.yaml  requirements.txt  wandb-metadata.json  wandb-summary.json
